# ygo-client-python

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg
ygo_client/: __init__.py  client.py  executor.py  manager.py
ygo_client/connection/: __init__.py  connect.py  packet.py
ygo_client/connection/enums/: __init__.py  ctos_message.py  error_type.py  game_message.py  stoc_message.py
