[metadata]
name = ygo_client-python
version = attr: ygo_client.__VERSION__
author = Shuhei Nitta
author_email = hinihatetsu@gmail.com
url = https://github.com/hinihatesu/ygo-client-python
description = YGO client package for Python
long_description = file: README.md
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    git+https://github.com/hinihatetsu/ygo-core-python
    
[options.packages.find]
exclude = 
    tests

[mypy]
ignore_missing_imports = True
strict = True