[metadata]
name = ygo-client-python
version = attr: ygo_client.__version__
author = Shuhei Nitta
author_email = hinihatetsu@gmail.com
url = https://github.com/hinihatesu/ygo-client-python
description = YGO client package for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    ygo-core-python @ git+https://github.com/hinihatetsu/ygo-core-python
    
[options.packages.find]
exclude = 
    tests

[mypy]
ignore_missing_imports = True
strict = True